# ClipnPaste

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json
assets/: clipnpaste.desktop
public/assets/: emoji-index.json
scripts/: build-deb.sh  build-emoji-index.mjs  build-env.sh  build-release.sh  install-local.sh  install-system.sh
src/: App.tsx  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  focus_target.rs  ipc.rs  lib.rs  main.rs  settings.rs  windows.rs
src-tauri/src/clipboard/: mod.rs  monitor.rs  types.rs
src-tauri/src/hotkeys/: cinnamon.rs  mod.rs  x11.rs
src-tauri/src/snip/: capture_x11.rs  mod.rs
src/components/: ClipboardPanel.tsx  EmojiTab.tsx  GifTab.tsx  HistoryTab.tsx  SettingsPanel.tsx  SnipEditor.tsx  SnipOverlay.tsx  SnipToast.tsx  SnipToolbar.tsx
src/types/: emoji.ts  settings.ts
