[package]
name = "clipnpaste"
version = "0.1.0"
description = "Windows 11-style clipboard history and snipping tool for Linux"
authors = ["Matt"]
edition = "2021"

[lib]
name = "clipnpaste_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "clipnpaste-cli"
path = "src/bin/clipnpaste-cli.rs"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
image = "0.25"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
gtk = "0.18"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
xcap = "0.0.14"
xkeysym = "0.2.1"

[package.metadata.deb]
maintainer = "Matt"
copyright = "2026, Matt"
license-file = ["../LICENSE", "4"]
extended-description = """\
ClipnPaste provides Windows 11-style clipboard history and a snipping tool
for Linux Mint and other Debian-based desktops."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/clipnpaste", "usr/bin/", "755"],
    ["../assets/clipnpaste.desktop", "usr/share/applications/", "644"],
    ["../src-tauri/icons/128x128.png", "usr/share/icons/hicolor/128x128/apps/clipnpaste.png", "644"],
]
